--- a/Matched Up/Base.lproj/Main.storyboard
+++ b/Matched Up/Base.lproj/Main.storyboard
@@ -21,27 +21,42 @@
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="wgV-5u-PKn">
                                 <rect key="frame" x="290" y="125" width="20" height="20"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="190" y="437" width="20" height="20"/>
+                                </variation>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jan-ze-rgf">
                                 <rect key="frame" x="165" y="550" width="270" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="270" id="t0j-UR-YmB"/>
-                                </constraints>
-                                <state key="normal" title="Login with Facebook">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Login with Facebook" backgroundImage="Facebook.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="100" y="538" width="200" height="42"/>
+                                </variation>
                                 <connections>
                                     <action selector="loginWithFacebookButtonPressed:" destination="pzJ-0d-jmd" eventType="touchUpInside" id="uNA-tY-QdB"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="gxC-ov-ZDN">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="133" y="159" width="134" height="94"/>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="jan-ze-rgf" secondAttribute="bottom" constant="20" symbolic="YES" id="MW5-03-v08"/>
-                            <constraint firstItem="wgV-5u-PKn" firstAttribute="centerX" secondItem="WT1-tJ-4AV" secondAttribute="centerX" id="NzT-aq-98R"/>
-                            <constraint firstItem="wgV-5u-PKn" firstAttribute="top" secondItem="1d0-Au-lbz" secondAttribute="bottom" constant="61" id="OzL-Fd-RJB"/>
-                            <constraint firstItem="jan-ze-rgf" firstAttribute="centerX" secondItem="wgV-5u-PKn" secondAttribute="centerX" id="ace-rf-WH4"/>
-                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="gxC-ov-ZDN"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="gxC-ov-ZDN"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="1WQ-3r-vY2"/>
                     <connections>
@@ -51,7 +66,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pFu-L7-Pve" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="89" y="0.0"/>
+            <point key="canvasLocation" x="88.5" y="0.0"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="bsU-7e-xxe">
@@ -1207,6 +1222,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Facebook.png" width="200" height="25"/>
+        <image name="Logo.png" width="134" height="94"/>
         <image name="user.png" width="428" height="512"/>
     </resources>
 </document>
