--- a/Matched Up/Base.lproj/Main.storyboard
+++ b/Matched Up/Base.lproj/Main.storyboard
@@ -101,40 +101,40 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="Mse-Xf-FaY" firstAttribute="baseline" secondItem="DR2-jc-dUB" secondAttribute="baseline" id="BQq-ba-dm8"/>
-                                    <constraint firstItem="sT6-cW-V6r" firstAttribute="leading" secondItem="cm5-ew-9Zw" secondAttribute="leading" id="CF9-2Y-eYd"/>
-                                    <constraint firstItem="DR2-jc-dUB" firstAttribute="leading" secondItem="cm5-ew-9Zw" secondAttribute="leadingMargin" id="Ik7-ZW-BuR"/>
-                                    <constraint firstAttribute="trailing" secondItem="sT6-cW-V6r" secondAttribute="trailing" id="YXq-Bo-Vnt"/>
-                                    <constraint firstItem="Mse-Xf-FaY" firstAttribute="baseline" secondItem="DR2-jc-dUB" secondAttribute="firstBaseline" id="h3l-hd-8mn"/>
-                                    <constraint firstItem="sT6-cW-V6r" firstAttribute="top" secondItem="cm5-ew-9Zw" secondAttribute="top" id="siH-Y3-uqV"/>
-                                    <constraint firstItem="DR2-jc-dUB" firstAttribute="top" secondItem="sT6-cW-V6r" secondAttribute="bottom" constant="29" id="vn4-4G-spk"/>
-                                    <constraint firstItem="Mse-Xf-FaY" firstAttribute="trailing" secondItem="cm5-ew-9Zw" secondAttribute="trailingMargin" id="w6P-61-S1I"/>
-                                    <constraint firstAttribute="bottom" secondItem="DR2-jc-dUB" secondAttribute="bottom" constant="20" id="yhB-up-RbD"/>
+                                    <constraint firstItem="Mse-Xf-FaY" firstAttribute="baseline" secondItem="DR2-jc-dUB" secondAttribute="baseline" id="2E0-nh-Dqa"/>
+                                    <constraint firstAttribute="bottom" secondItem="DR2-jc-dUB" secondAttribute="bottom" constant="10" id="6DU-P9-Uhw"/>
+                                    <constraint firstItem="sT6-cW-V6r" firstAttribute="leading" secondItem="cm5-ew-9Zw" secondAttribute="leading" id="CDd-Gb-gda"/>
+                                    <constraint firstItem="DR2-jc-dUB" firstAttribute="top" secondItem="sT6-cW-V6r" secondAttribute="bottom" constant="15" id="KgN-Ce-n2V"/>
+                                    <constraint firstAttribute="trailing" secondItem="sT6-cW-V6r" secondAttribute="trailing" id="bKD-iZ-0OL"/>
+                                    <constraint firstItem="sT6-cW-V6r" firstAttribute="top" secondItem="cm5-ew-9Zw" secondAttribute="top" id="clj-dP-JmF"/>
+                                    <constraint firstItem="DR2-jc-dUB" firstAttribute="leading" secondItem="cm5-ew-9Zw" secondAttribute="leadingMargin" id="iem-YY-LAw"/>
+                                    <constraint firstItem="Mse-Xf-FaY" firstAttribute="trailing" secondItem="cm5-ew-9Zw" secondAttribute="trailingMargin" id="kBl-pr-5ma"/>
+                                    <constraint firstItem="Mse-Xf-FaY" firstAttribute="baseline" secondItem="DR2-jc-dUB" secondAttribute="firstBaseline" id="pKY-V8-j56"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="CF9-2Y-eYd"/>
-                                        <exclude reference="YXq-Bo-Vnt"/>
-                                        <exclude reference="siH-Y3-uqV"/>
-                                        <exclude reference="Ik7-ZW-BuR"/>
-                                        <exclude reference="vn4-4G-spk"/>
-                                        <exclude reference="yhB-up-RbD"/>
-                                        <exclude reference="BQq-ba-dm8"/>
-                                        <exclude reference="h3l-hd-8mn"/>
-                                        <exclude reference="w6P-61-S1I"/>
+                                        <exclude reference="CDd-Gb-gda"/>
+                                        <exclude reference="bKD-iZ-0OL"/>
+                                        <exclude reference="clj-dP-JmF"/>
+                                        <exclude reference="6DU-P9-Uhw"/>
+                                        <exclude reference="KgN-Ce-n2V"/>
+                                        <exclude reference="iem-YY-LAw"/>
+                                        <exclude reference="2E0-nh-Dqa"/>
+                                        <exclude reference="kBl-pr-5ma"/>
+                                        <exclude reference="pKY-V8-j56"/>
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact">
                                     <mask key="constraints">
-                                        <include reference="CF9-2Y-eYd"/>
-                                        <include reference="YXq-Bo-Vnt"/>
-                                        <include reference="siH-Y3-uqV"/>
-                                        <include reference="Ik7-ZW-BuR"/>
-                                        <include reference="vn4-4G-spk"/>
-                                        <include reference="yhB-up-RbD"/>
-                                        <include reference="BQq-ba-dm8"/>
-                                        <include reference="h3l-hd-8mn"/>
-                                        <include reference="w6P-61-S1I"/>
+                                        <include reference="CDd-Gb-gda"/>
+                                        <include reference="bKD-iZ-0OL"/>
+                                        <include reference="clj-dP-JmF"/>
+                                        <include reference="6DU-P9-Uhw"/>
+                                        <include reference="KgN-Ce-n2V"/>
+                                        <include reference="iem-YY-LAw"/>
+                                        <include reference="2E0-nh-Dqa"/>
+                                        <include reference="kBl-pr-5ma"/>
+                                        <include reference="pKY-V8-j56"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -145,7 +145,7 @@
                                         <rect key="frame" x="20" y="20" width="39" height="37"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="39" id="jUF-Tw-Mit"/>
+                                            <constraint firstAttribute="width" constant="39" id="3HQ-6R-nYK"/>
                                         </constraints>
                                         <state key="normal" image="LikeIcon.png">
                                             <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -153,12 +153,12 @@
                                         </state>
                                         <variation key="default">
                                             <mask key="constraints">
-                                                <exclude reference="jUF-Tw-Mit"/>
+                                                <exclude reference="3HQ-6R-nYK"/>
                                             </mask>
                                         </variation>
                                         <variation key="widthClass=compact">
                                             <mask key="constraints">
-                                                <include reference="jUF-Tw-Mit"/>
+                                                <include reference="3HQ-6R-nYK"/>
                                             </mask>
                                         </variation>
                                         <connections>
@@ -188,71 +188,71 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="OtP-yX-ikn" firstAttribute="top" secondItem="RbC-2z-IeK" secondAttribute="top" constant="11" id="5Qd-OW-1Gu"/>
-                                    <constraint firstItem="OtP-yX-ikn" firstAttribute="leading" secondItem="RbC-2z-IeK" secondAttribute="leadingMargin" id="5qZ-2p-8j0"/>
-                                    <constraint firstItem="OtP-yX-ikn" firstAttribute="bottom" secondItem="3Jp-Ek-fbP" secondAttribute="bottom" id="9EK-D8-9u0"/>
-                                    <constraint firstItem="3Jp-Ek-fbP" firstAttribute="centerX" secondItem="RbC-2z-IeK" secondAttribute="centerX" id="D1R-S8-1Ld"/>
-                                    <constraint firstItem="OtP-yX-ikn" firstAttribute="top" secondItem="3Jp-Ek-fbP" secondAttribute="top" id="HYr-Yk-yni"/>
-                                    <constraint firstItem="wIo-jJ-who" firstAttribute="trailing" secondItem="RbC-2z-IeK" secondAttribute="trailingMargin" id="hPn-ne-dU8"/>
-                                    <constraint firstAttribute="bottom" secondItem="OtP-yX-ikn" secondAttribute="bottom" constant="12" id="pCo-EF-Ysg"/>
-                                    <constraint firstItem="3Jp-Ek-fbP" firstAttribute="top" secondItem="wIo-jJ-who" secondAttribute="top" id="wuC-WA-B33"/>
+                                    <constraint firstItem="3Jp-Ek-fbP" firstAttribute="top" secondItem="wIo-jJ-who" secondAttribute="top" id="3a5-S7-osO"/>
+                                    <constraint firstItem="3Jp-Ek-fbP" firstAttribute="bottom" secondItem="OtP-yX-ikn" secondAttribute="bottom" id="4ek-tf-8N3"/>
+                                    <constraint firstItem="OtP-yX-ikn" firstAttribute="top" secondItem="RbC-2z-IeK" secondAttribute="top" constant="11" id="JCE-Lr-KXE"/>
+                                    <constraint firstItem="3Jp-Ek-fbP" firstAttribute="top" secondItem="OtP-yX-ikn" secondAttribute="top" id="SFA-Lc-ror"/>
+                                    <constraint firstItem="OtP-yX-ikn" firstAttribute="leading" secondItem="RbC-2z-IeK" secondAttribute="leadingMargin" id="WSB-77-zbQ"/>
+                                    <constraint firstItem="3Jp-Ek-fbP" firstAttribute="centerX" secondItem="RbC-2z-IeK" secondAttribute="centerX" id="g0p-KV-VeR"/>
+                                    <constraint firstAttribute="bottom" secondItem="OtP-yX-ikn" secondAttribute="bottom" constant="12" id="o3N-SA-9B9"/>
+                                    <constraint firstItem="wIo-jJ-who" firstAttribute="trailing" secondItem="RbC-2z-IeK" secondAttribute="trailingMargin" id="ziE-ik-q5I"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="5Qd-OW-1Gu"/>
-                                        <exclude reference="5qZ-2p-8j0"/>
-                                        <exclude reference="9EK-D8-9u0"/>
-                                        <exclude reference="HYr-Yk-yni"/>
-                                        <exclude reference="pCo-EF-Ysg"/>
-                                        <exclude reference="D1R-S8-1Ld"/>
-                                        <exclude reference="wuC-WA-B33"/>
-                                        <exclude reference="hPn-ne-dU8"/>
+                                        <exclude reference="JCE-Lr-KXE"/>
+                                        <exclude reference="WSB-77-zbQ"/>
+                                        <exclude reference="o3N-SA-9B9"/>
+                                        <exclude reference="3a5-S7-osO"/>
+                                        <exclude reference="4ek-tf-8N3"/>
+                                        <exclude reference="SFA-Lc-ror"/>
+                                        <exclude reference="g0p-KV-VeR"/>
+                                        <exclude reference="ziE-ik-q5I"/>
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact">
                                     <mask key="constraints">
-                                        <include reference="5Qd-OW-1Gu"/>
-                                        <include reference="5qZ-2p-8j0"/>
-                                        <include reference="9EK-D8-9u0"/>
-                                        <include reference="HYr-Yk-yni"/>
-                                        <include reference="pCo-EF-Ysg"/>
-                                        <include reference="D1R-S8-1Ld"/>
-                                        <include reference="wuC-WA-B33"/>
-                                        <include reference="hPn-ne-dU8"/>
+                                        <include reference="JCE-Lr-KXE"/>
+                                        <include reference="WSB-77-zbQ"/>
+                                        <include reference="o3N-SA-9B9"/>
+                                        <include reference="3a5-S7-osO"/>
+                                        <include reference="4ek-tf-8N3"/>
+                                        <include reference="SFA-Lc-ror"/>
+                                        <include reference="g0p-KV-VeR"/>
+                                        <include reference="ziE-ik-q5I"/>
                                     </mask>
                                 </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="RbC-2z-IeK" firstAttribute="top" secondItem="cm5-ew-9Zw" secondAttribute="bottom" constant="32" id="JOJ-qi-obP"/>
-                            <constraint firstItem="RbC-2z-IeK" firstAttribute="centerX" secondItem="RI2-WR-3V1" secondAttribute="centerX" id="LHP-iP-3sP"/>
-                            <constraint firstItem="cm5-ew-9Zw" firstAttribute="leading" secondItem="RI2-WR-3V1" secondAttribute="leadingMargin" constant="14" id="U3F-T3-hpN"/>
-                            <constraint firstItem="RbC-2z-IeK" firstAttribute="leading" secondItem="cm5-ew-9Zw" secondAttribute="leading" id="Y4y-u1-mrA"/>
-                            <constraint firstItem="cm5-ew-9Zw" firstAttribute="trailing" secondItem="RbC-2z-IeK" secondAttribute="trailing" id="qKs-DB-srq"/>
-                            <constraint firstItem="cm5-ew-9Zw" firstAttribute="top" secondItem="Ud0-21-woQ" secondAttribute="bottom" constant="8" symbolic="YES" id="r2b-Jy-r8E"/>
-                            <constraint firstAttribute="bottom" secondItem="RbC-2z-IeK" secondAttribute="bottom" constant="20" symbolic="YES" id="yKg-X8-K9C"/>
+                            <constraint firstItem="RbC-2z-IeK" firstAttribute="leading" secondItem="cm5-ew-9Zw" secondAttribute="leading" id="2fc-eK-8e2"/>
+                            <constraint firstItem="RbC-2z-IeK" firstAttribute="centerX" secondItem="RI2-WR-3V1" secondAttribute="centerX" id="36Z-Wy-alc"/>
+                            <constraint firstItem="cm5-ew-9Zw" firstAttribute="top" secondItem="Ud0-21-woQ" secondAttribute="bottom" constant="8" symbolic="YES" id="bsy-Ja-dCy"/>
+                            <constraint firstItem="RbC-2z-IeK" firstAttribute="top" secondItem="cm5-ew-9Zw" secondAttribute="bottom" constant="28" id="cUj-r0-eFN"/>
+                            <constraint firstItem="cm5-ew-9Zw" firstAttribute="leading" secondItem="RI2-WR-3V1" secondAttribute="leadingMargin" constant="14" id="fVt-bP-I9C"/>
+                            <constraint firstItem="cm5-ew-9Zw" firstAttribute="trailing" secondItem="RbC-2z-IeK" secondAttribute="trailing" id="gOF-XG-4eA"/>
+                            <constraint firstItem="47g-Ah-GK2" firstAttribute="top" secondItem="RbC-2z-IeK" secondAttribute="bottom" constant="35" id="uzK-4W-Ne9"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="U3F-T3-hpN"/>
-                                <exclude reference="qKs-DB-srq"/>
-                                <exclude reference="r2b-Jy-r8E"/>
-                                <exclude reference="JOJ-qi-obP"/>
-                                <exclude reference="LHP-iP-3sP"/>
-                                <exclude reference="Y4y-u1-mrA"/>
-                                <exclude reference="yKg-X8-K9C"/>
+                                <exclude reference="bsy-Ja-dCy"/>
+                                <exclude reference="fVt-bP-I9C"/>
+                                <exclude reference="gOF-XG-4eA"/>
+                                <exclude reference="2fc-eK-8e2"/>
+                                <exclude reference="36Z-Wy-alc"/>
+                                <exclude reference="cUj-r0-eFN"/>
+                                <exclude reference="uzK-4W-Ne9"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="constraints">
-                                <include reference="U3F-T3-hpN"/>
-                                <include reference="qKs-DB-srq"/>
-                                <include reference="r2b-Jy-r8E"/>
-                                <include reference="JOJ-qi-obP"/>
-                                <include reference="LHP-iP-3sP"/>
-                                <include reference="Y4y-u1-mrA"/>
-                                <include reference="yKg-X8-K9C"/>
+                                <include reference="bsy-Ja-dCy"/>
+                                <include reference="fVt-bP-I9C"/>
+                                <include reference="gOF-XG-4eA"/>
+                                <include reference="2fc-eK-8e2"/>
+                                <include reference="36Z-Wy-alc"/>
+                                <include reference="cUj-r0-eFN"/>
+                                <include reference="uzK-4W-Ne9"/>
                             </mask>
                         </variation>
                     </view>
